# FastTracker

./: LICENSE  README.md  install_pytorch.sh  requirements.txt  run_public_detections.sh  setup.py
TrackEval/: .gitignore  MotaSequencePreparation.py  Readme.md  hotaPreparation.py  requirements.txt  setup.cfg
TrackEval/docs/OpenWorldTracking-Official/: Readme.md
TrackEval/docs/RobMOTS-Official/: Readme.md
TrackEval/scripts/: run_burst.py  run_burst_ow.py  run_mot_challenge.py  run_person_path_22.py  run_rob_mots.py  run_tao_ow.py
TrackEval/tracker_test/MOT16/10/: MOT16-10.txt
TrackEval/tracker_test/MOT16/11/: MOT16-11.txt
TrackEval/tracker_test/MOT16/13/: MOT16-13.txt
TrackEval/trackeval/: eval.py  utils.py
TrackEval/trackeval/baselines/: stp.py  vizualize.py
TrackEval/trackeval/datasets/: __init__.py  bdd100k.py  burst.py  burst_ow.py  davis.py  head_tracking_challenge.py  kitti_2d_box.py  kitti_mots.py  mot_challenge_2d_box.py  mots_challenge.py  person_path_22.py  rob_mots.py  tao.py  tao_ow.py  youtube_vis.py
TrackEval/trackeval/metrics/: hota.py  identity.py
configs/: 004_default.json  005_default.json
deploy/c++/: CMakeLists.txt  README.md  main.cpp
deploy/c++/include/: FastTracker.h  STrack.h  kalmanFilter.h
deploy/c++/src/: FastTracker.cpp  STrack.cpp  kalmanFilter.cpp  utils.cpp
exps/example/mot/: yolox_x_mix_det.py  yolox_x_mix_mot16_ch.py  yolox_x_mix_mot20_ch.py
tools/: convert_mot16_to_coco.py  convert_mot17_to_coco.py  convert_mot20_to_coco.py  demo_track.py  eval_results.py  get_latest_run.py  interpolation.py  track.py  track_public.py
yolox/data/datasets/: mot.py
yolox/evaluators/: mot_evaluator.py
yolox/tracker/: byte_tracker.py  fasttracker.py  matching.py
yolox/utils/: visualize.py
(+55 files in other folders)
